<resources>
    <string name="app_name">WeatherApp</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">Username</string>
    <string name="or_sign_up">Or Sign up</string>
    <string name="password">Password</string>
    <string name="please_enter_your_usename">Please enter your username</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="user_name_not_found">User with username %1$s was not found, please sign up.</string>
    <string name="not_correct_password">Incorrect password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="the_passwords_doesnt_match">The passwords doesnt match</string>
    <string name="credentials_saved">Credentials saved</string>
    <string name="shared_preferences">com.koleber.android.weatherapp</string>
    <string name="enter_city">Enter city</string>
    <string name="city">City</string>
    <string name="whats_the_weather">What\'s the weather?</string>
    <string name="api_call">http://api.openweathermap.org/data/2.5/weather?q=%1$s&amp;appid=b5cd0fd79808f0da4fde8b0ce9eeae7d</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="city_name">City name:</string>
    <string name="date">Date:</string>
    <string name="day">Day:</string>
    <string name="temperature">Temperature ℃:</string>
    <string name="cloudy">Cloud cover in %:</string>
    <string name="humidity">Humidity in %:</string>
    <string name="title_activity_maps">Map</string>
    <string name="your_current_location">Your current location</string>
    <string name="your_are_here">You are here</string>
</resources>
